see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2007-06-XX  Release 7.10.3                                     ---
----------------------------------------------------------------------

* fixed small TGC (cone) primitive raytrace prep bug - Sean Morrison
* increased output precision from nirt/query_ray - Sean Morrison
* removed op-bw for reading Optronics Scanner images - Sean Morrison
* beset - Ben's Evolutionary Shape Extraction Tool - Ben Poole


----------------------------------------------------------------------
--- 2007-05-16  Release 7.10.2                                     ---
----------------------------------------------------------------------

* support infinite # of shadow rays in the raytracers - Sean Morrison
* improved anim_hardtrack manual page documentation - Erik Greenwald
* added 'bomb' command to mged for script termination - Sean Morrison
* mged and pl-X automatically focus to X11 on Mac OS X - Sean Morrison
* pl-X functionality enhancements for displaying plots - Sean Morrison
* fixed g_diff bug where -f option missed differences- John Anderson
* fixed mged 'units' command, reports current setting - John Anderson
* benchmark tool automatically logs all output to file - Sean Morrison
* added 'clobber' cleanup command to benchmark tool - Sean Morrison
* added NIST's Template Numerical Toolkit - Sean Morrison
* prevent pix-png from writing png data to a tty - Sean Morrison
* generate crash report files during application abort - Sean Morrison
* upgrade bundled tcl/tk from 8.5a5 to 8.5a6 (AquaTk) - Sean Morrison
* fixed memory leak in librtserver - John Anderson
* converters abort early on corrupted input geometry - John Anderson
* fixed versioning issues in source distributions - Sean Morrison
* new BRL-CAD installer for Windows using NSIS - Jonathan Bonomo